Update Hero/Footer text, remove Manifesto link, add LoadingScreen

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,8 +14,8 @@
         "become_member": "Become a Member"
     },
     "hero": {
-        "title": "The Bridge between Historical Cycles <0/>and Productive Capacities",
-        "subtitle": "Connecting Latin America to global markets through technology, logistics, and strategic intelligence.",
+        "title": "Global Enablement with Backing and Institutional Security.",
+        "subtitle": "The solid foundation to mitigate risks. Legal and technological architecture to shield large investments.",
         "cta_manifesto": "Read the Manifesto"
     },
     "market": {
@@ -42,8 +42,8 @@
     "institutional": {
         "label": "Institutional",
         "title": "What is CCTAAL?",
-        "subtitle": "Chamber of Commerce and Technology for Agribusiness and Latin America.",
-        "description": "CCTAAL was born with the purpose of representing and strengthening Agro technology on the global stage, promoting trade, innovation, and integration among countries, companies, and investors. We act as a strategic link between international opportunities and the sustainable development of Latin America.",
+        "subtitle": "Chamber of Commerce and Technology and Agro of Latin America.",
+        "description": "CCTAAL works to ensure project success, focusing on minimizing investment and delivery risks. We use the maximum application of technology to extract the best possible performance, transforming international opportunities into sustainable and shielded development.",
         "cta": "Meet Our Structure"
     },
     "what_we_do": {
@@ -126,7 +126,7 @@
         "cta": "Click to Subscribe"
     },
     "footer": {
-        "description": "Chamber of Commerce and Technology for Agribusiness and Latin America.<0/>Connecting historical cycles and productive capacities.",
+        "description": "Chamber of Commerce and Technology and Agro of Latin America. <0/>Connecting historical cycles and productive capacities.",
         "nav_title": "Navigation",
         "contact_title": "Contact",
         "legal_title": "Legal",
