--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -14,8 +14,8 @@
         "become_member": "Hazte Miembro"
     },
     "hero": {
-        "title": "El Puente entre Ciclos Históricos <0/>y Capacidades Productivas",
-        "subtitle": "Conectando América Latina a los mercados globales a través de tecnología, logística e inteligencia estratégica.",
+        "title": "Viabilización Global con Respaldo y Seguridad Institucional.",
+        "subtitle": "La base sólida para mitigar riesgos. Arquitectura jurídica y tecnológica para blindar grandes inversiones.",
         "cta_manifesto": "Leer el Manifiesto"
     },
     "market": {
@@ -42,8 +42,8 @@
     "institutional": {
         "label": "Institucional",
         "title": "¿Qué es CCTAAL?",
-        "subtitle": "Cámara de Comercio y Tecnología para el Agronegocio y América Latina.",
-        "description": "CCTAAL nació con el propósito de representar y fortalecer la tecnología Agro en el escenario global, promoviendo el comercio, la innovación y la integración entre países, empresas e inversores. Actuamos como un vínculo estratégico entre las oportunidades internacionales y el desarrollo sostenible de América Latina.",
+        "subtitle": "Cámara de Comercio y Tecnología y Agro de América Latina.",
+        "description": "La CCTAAL actúa para garantizar el éxito del proyecto, enfocándose en la minimización de riesgos de inversión y entrega. Utilizamos la aplicación máxima de tecnología para extraer el mejor rendimiento posible, transformando oportunidades internacionales en desarrollo sostenible y blindado.",
         "cta": "Conoce Nuestra Estructura"
     },
     "what_we_do": {
@@ -126,7 +126,7 @@
         "cta": "Haga clic para Suscribirse"
     },
     "footer": {
-        "description": "Cámara de Comercio y Tecnología para el Agronegocio y América Latina.<0/>Conectando ciclos históricos y capacidades productivas.",
+        "description": "Cámara de Comercio y Tecnología y Agro de América Latina. <0/>Conectando ciclos históricos y capacidades productivas.",
         "nav_title": "Navegación",
         "contact_title": "Contacto",
         "legal_title": "Legal",
