--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -14,8 +14,8 @@
         "become_member": "Seja Membro"
     },
     "hero": {
-        "title": "A Ponte entre Ciclos Históricos <0/>e Capacidades Produtivas",
-        "subtitle": "Conectando a América Latina aos mercados globais através de tecnologia, logística e inteligência estratégica.",
+        "title": "Viabilização Global com Lastro e Segurança Institucional.",
+        "subtitle": "A base sólida para mitigar riscos. Arquitetura jurídica e tecnológica para blindar grandes investimentos.",
         "cta_manifesto": "Ler o Manifesto"
     },
     "market": {
@@ -42,8 +42,8 @@
     "institutional": {
         "label": "Institucional",
         "title": "O que é a CCTAAL?",
-        "subtitle": "Câmara de Comércio e Tecnologia do Agro da América Latina.",
-        "description": "A CCTAAL nasceu com o propósito de representar e fortalecer a tecnologia do Agro no cenário global, promovendo viabilização, inovação e integração entre países, empresas e investidores. Atuamos como elo estratégico entre oportunidades internacionais e o desenvolvimento sustentável da América Latina.",
+        "subtitle": "Câmara de Comércio e Tecnologia e Agro da América Latina.",
+        "description": "A CCTAAL atua para garantir o sucesso do projeto, focando na minimização de riscos de investimento e entrega. Utilizamos a aplicação máxima de tecnologia para extrair a melhor performance possível, transformando oportunidades internacionais em desenvolvimento sustentável e blindado.",
         "cta": "Conheça Nossa Estrutura"
     },
     "what_we_do": {
@@ -126,8 +126,8 @@
         "cta": "Clique para se inscrever"
     },
     "footer": {
-        "description": "Câmara do Comércio e Tecnologia do Agro e da América Latina.<0/>Conectando ciclos históricos e capacidades produtivas.",
-        "nav_title": "Navigation",
+        "description": "Câmara de Comércio e Tecnologia e Agro da América Latina. <0/>Conectando ciclos históricos e capacidades produtivas.",
+        "nav_title": "Navegação",
         "contact_title": "Contato",
         "legal_title": "Legal",
         "terms": "Termos de Uso",
