--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -14,8 +14,8 @@
         "become_member": "成为会员"
     },
     "hero": {
-        "title": "跨越历史周期与<0/>生产能力的桥梁",
-        "subtitle": "通过技术、物流和战略情报将拉丁美洲连接到全球市场。",
+        "title": "具有支持和机构安全的全球赋能。",
+        "subtitle": "降低风险的坚实基础。旨在保护大型投资的法律和技术架构。",
         "cta_manifesto": "阅读宣言"
     },
     "market": {
@@ -42,8 +42,8 @@
     "institutional": {
         "label": "机构",
         "title": "什么是 CCTAAL？",
-        "subtitle": "拉丁美洲农业综合企业商业与技术商会。",
-        "description": "CCTAAL 的诞生旨在全球舞台上代表和加强农业技术，促进国家、企业和投资者之间的贸易、创新和整合。我们充当国际机遇与拉丁美洲可持续发展之间的战略纽带。",
+        "subtitle": "拉美商业、技术与农业商会。",
+        "description": "CCTAAL 致力于确保项目成功，专注于最大限度地降低投资和交付风险。我们利用技术的最大化应用来提取最佳性能，将国际机遇转化为可持续且受保护的发展。",
         "cta": "了解我们的架构"
     },
     "what_we_do": {
@@ -126,9 +126,9 @@
         "cta": "点击订阅"
     },
     "footer": {
-        "description": "拉丁美洲农业综合企业商业与技术商会。<0/>连接历史周期与生产能力。",
+        "description": "拉美商业、技术与农业商会。 <0/>连接历史周期与生产能力。",
         "nav_title": "导航",
-        "contact_title": "联系方式",
+        "contact_title": "联系我们",
         "legal_title": "法律",
         "terms": "使用条款",
         "privacy": "隐私政策",
