Update footer description: Viabilizando/Enabling/FuNeng, News link, Contact info

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -126,7 +126,7 @@
         "cta": "Click to Subscribe"
     },
     "footer": {
-        "description": "Chamber of Commerce and Technology and Agro of Latin America. <0/>Connecting historical cycles and productive capacities.",
+        "description": "Chamber of Commerce and Technology and Agro of Latin America. <0/>Enabling historical cycles and productive capacities.",
         "nav_title": "Navigation",
         "contact_title": "Contact",
         "legal_title": "Legal",
