--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -126,7 +126,7 @@
         "cta": "Haga clic para Suscribirse"
     },
     "footer": {
-        "description": "Cámara de Comercio y Tecnología y Agro de América Latina. <0/>Conectando ciclos históricos y capacidades productivas.",
+        "description": "Cámara de Comercio y Tecnología y Agro de América Latina. <0/>Viabilizando ciclos históricos y capacidades produtivas.",
         "nav_title": "Navegación",
         "contact_title": "Contacto",
         "legal_title": "Legal",
