--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -126,7 +126,7 @@
         "cta": "Solicitar Credenciamento"
     },
     "footer": {
-        "description": "Câmara de Comércio e Tecnologia e Agro da América Latina. <0/>Conectando ciclos históricos e capacidades produtivas.",
+        "description": "Câmara de Comércio e Tecnologia e Agro da América Latina. <0/>Viabilizando ciclos históricos e capacidades produtivas.",
         "nav_title": "Navegação",
         "contact_title": "Contato",
         "legal_title": "Legal",
