--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -126,7 +126,7 @@
         "cta": "点击订阅"
     },
     "footer": {
-        "description": "拉美商业、技术与农业商会。 <0/>连接历史周期与生产能力。",
+        "description": "拉美商业、技术与农业商会。 <0/>赋能历史周期与生产能力。",
         "nav_title": "导航",
         "contact_title": "联系我们",
         "legal_title": "法律",
