Fix design on Contact page and mobile bug on Institutional page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
     "language": "Language",
     "nav": {
         "what_we_do": "What We Do",
-        "business_solutions": "Operational Structures",
+        "business_solutions": "Viability Structures",
         "international_trade": "International Project Facilitation",
         "tech_innovation": "Technology & Innovation",
         "market_intelligence": "Market Intelligence",
@@ -11,7 +11,7 @@
         "chamber": "The Institution",
         "intelligence": "Intelligence",
         "news": "News",
-        "become_member": "Become a Member"
+        "become_member": "Apply for Analysis"
     },
     "hero": {
         "title": "Chamber of Commerce and Technology and Agro of Latin America.",
