--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -3,7 +3,7 @@
     "language": "Idioma",
     "nav": {
         "what_we_do": "Lo que hacemos",
-        "business_solutions": "Estructuras Operativas",
+        "business_solutions": "Estructuras de Viabilidad",
         "international_trade": "Viabilización de Proyectos Internacionales",
         "tech_innovation": "Tecnología e Innovación",
         "market_intelligence": "Inteligencia de Mercado",
@@ -11,7 +11,7 @@
         "chamber": "La Institución",
         "intelligence": "Inteligencia",
         "news": "Noticias",
-        "become_member": "Hazte Miembro"
+        "become_member": "Aplicar para Análisis"
     },
     "hero": {
         "title": "Cámara de Comercio y Tecnología y Agro de América Latina.",
