--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -3,7 +3,7 @@
     "language": "语言",
     "nav": {
         "what_we_do": "我们的业务",
-        "business_solutions": "运营结构",
+        "business_solutions": "可行性结构",
         "international_trade": "国际项目促进",
         "tech_innovation": "技术与创新",
         "market_intelligence": "市场情报",
@@ -11,7 +11,7 @@
         "chamber": "机构",
         "intelligence": "情报",
         "news": "新闻",
-        "become_member": "成为会员"
+        "become_member": "申请分析"
     },
     "hero": {
         "title": "拉美商业、技术与农业商会。",
